--- a/bookstore/app/templates/books.hbs
+++ b/bookstore/app/templates/books.hbs
@@ -5,5 +5,5 @@
 </ul>
 
 {{#if showAll}}
-  <button {{action 'showAll'}}>Show All</button>
+  <button class="btn btn-primary" {{action 'showAll'}}>Show All</button>
 {{/if}}
