--- a/bookstore/app/templates/components/book-cover.hbs
+++ b/bookstore/app/templates/components/book-cover.hbs
@@ -7,12 +7,13 @@
 {{#if isShowingModal}}
   {{#modal-dialog close="close" clickOutsideToClose=true}}
 
-    <div class="modal">
+    <div class="my-modal">
       <h3>Purchase Confirmation</h3>
-      You want to buy <strong>{{book.title}}</strong> by {{book.author.name}}.
 
+      You want to buy <strong>{{book.title}}</strong> by {{book.author.name}}.
+      <br><br>
       <p>
-        <button {{action "close"}}>Purchase for ${{book.price}}</button>
+        <button class="btn btn-success" {{action "close"}}>Purchase for ${{book.price}}</button>
       </p>
 
       <p>
